# llm-templating-engine

./: .envrc  .gitignore  DESIGN.md  README.md  justfile  pyproject.toml  types.d.ts  vulture_whitelist.py
.github/workflows/: ci.yml  publish.yml
.serena/: project.yml
.xdg-home/: .z
.xdg-home/.local/share/atuin/: history.db-shm  history.db-wal  key  meta.db  records.db-shm  records.db-wal
src/llm_templating_engine/: __init__.py  cli.py  core.py  types.py
src/template_parsing_engine/: __init__.py  cli.py  core.py  types.py
tests/: test_cli.py  test_core.py
tests/fixtures/: basic.md  partial.md  with_includes.md  with_variables.md
