[project]
name = "llm-templating-engine"
version = "0.1.0"
description = "Standalone prompt templating engine for Jinja2 and YAML frontmatter"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "dzack"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
llm-templating-engine = "llm_templating_engine.cli:main"
llm-template-render = "llm_templating_engine.cli:render_main"
llm-template-inspect = "llm_templating_engine.cli:inspect_main"
llm-template-validate = "llm_templating_engine.cli:validate_main"
llm-template-list = "llm_templating_engine.cli:list_main"

[project.urls]
Homepage = "https://github.com/dzackgarza/llm-templating-engine"
Repository = "https://github.com/dzackgarza/llm-templating-engine"
Issues = "https://github.com/dzackgarza/llm-templating-engine/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_templating_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.ruff.lint.pydocstyle]
convention = "google"
